--- a/index.html
+++ b/index.html
@@ -7,6 +7,51 @@
     <title>CSD112-Caleb Stubbe</title>
 </head>
 <body>
-    Hello World!
+    <div class width-wrap>
+        <header id top>
+            <nav>
+                <ul>
+                    <li><a href="index.html" title="Home">Home</a></li>
+                    <li><a href="links.html" title="Links">Links</a></li>
+                    <li><a href="glossary.html" title="Glossary">Glossary</a></li>
+                </ul>
+            </nav>
+        </header>
+        
+        <main>
+            <h1>
+                Welcome to Caleb's Website!
+            </h1>
+            <p>Hi! I'm Caleb Stubbe, I'm the youngest of 5 brothers.</p>
+            <p>I live on St. Joseph Island, Ontario</p>
+            <h2>
+                My Favourite Things
+            </h2>
+            <a href="https://www.nintendo.com/en_CA/">
+                <img src="images/logo.png" alt="Nintendo logo that links to Nintendo's website">
+            </a>
+            <h3>
+                Book series
+            </h3>
+            <ol>
+                <li>The Malazan Book Of The Fallen</li>
+                <li>Stormlight Archives</li>
+                <li>The Rage of Dragons</li>
+            </ol>
+
+
+
+
+        </main>
+
+        <footer>
+            <p> 
+                <a href=id
+                title = "back to top"> ◤ </a>
+            </p>
+
+        </footer>
+    
+    </div>
 </body>
 </html>
