--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> <!-- Found me!-->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name= "author" content = "Caleb Stubbe">
+    <meta name="description" content = "This is my website for CSD112 Labs">
     <title>CSD112-Caleb Stubbe</title>
 </head>
 <body>
     <div class width-wrap>
-        <header id top> <!-- NEEEDS FIXING RIGHT HERE, YEP THIS HERE NOT WORKING YET-->
+        <header id="top"> <!-- NEEEDS FIXING RIGHT HERE, YEP THIS HERE NOT WORKING YET-->
             <nav>
                 <ul>
                     <li><a href="index.html" title="Home">Home</a></li>
@@ -49,30 +50,25 @@
                 A world of dew,<br>
                 And within every dewdrop<br>
                 A world of struggle<br>
-                <cite> by <span class author>Kobayashi Issa</span></cite>
+                <cite="https://www.readpoetry.com/10-vivid-haikus-to-leave-you-breathless/"> by <span class author>Kobayashi Issa</span></cite>
                
             </p>
-
-
-
-
         </main>
 
         <footer>
             <hr>
             <blockquote>
                 “The future can ever promise but one thing and one thing only: surprises.” <br>
-                <cite><em><span class author> -Steven Erkison</span></em></cite>
+                <cite="https://www.goodreads.com/author/quotes/31232.Steven_Erikson"><em><span class author> -Steven Erkison</span></em></cite>
             </blockquote>
 
             <p>
-                 2021 <a href="mailto:21100789@saultcollege.ca?subject=Message From CSD120 Website" title = website creators email>Caleb Stubbe</a> 
+                 2021 <a href="mailto:21100789@saultcollege.ca?subject=Message%20From%20CSD112%20Website" title = website creators email>Caleb Stubbe</a> 
             </p>
 
         </footer>
         <p> 
-            <a href= id
-            title = "back to top"> ◤ </a>
+            <a href= "#id"  title ="back to top"> ◤ </a> <!--FIX THIS RIGHT HERE-->
         </p>
     </div>
 </body>
