added glossary and links files

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class width-wrap>
-        <header id="top"> <!-- NEEEDS FIXING RIGHT HERE, YEP THIS HERE NOT WORKING YET-->
+        <header id="top"> <!-- not sure if this line is not working properly or if website is not yet large enough for it to be used properly-->
             <nav>
                 <ul>
                     <li><a href="index.html" title="Home">Home</a></li>
@@ -73,12 +73,12 @@
             </blockquote>
 
             <p>
-                 2021 <a href="mailto:21100789@saultcollege.ca?subject=Message%20From%20CSD112%20Website" title = website creators email>Caleb Stubbe</a> 
+                 &copy;2021 <a href="mailto:21100789@saultcollege.ca?subject=Message%20From%20CSD112%20Website" title = website creators email>Caleb Stubbe</a> 
             </p>
 
         </footer>
         <p> 
-            <a href= "#id"  title ="back to top"> ◤ </a> <!--FIX THIS RIGHT HERE-->
+            <a href= "#id"  title ="back to top"> ◤ </a> <!--not sure if this line is not working properly or if website is not yet large enough for it to be used properly-->
         </p>
     </div>
 </body>
