--- a/glossary.html
+++ b/glossary.html
@@ -19,7 +19,7 @@
     <title>CSD112-Caleb Stubbe</title>
 </head>
 <body>
-    <div class width-wrap>
+    <div class="width-wrap">
         <header id="top"> <!-- not sure if this line is not working properly or if website is not yet large enough for it to be used properly-->
             <nav>
                 <ul>
@@ -43,31 +43,29 @@
                     <dd>A favicon is the emblem or logo that is shown on the top tab to make the website more recognizable to users whith multiple tabs open</dd>
                 <dt>&lt;hr&gt; element</dt>
                     <dd>Creates a horizantal seperating line through the page</dd>
-                <dt>&lt;br&gt element</dt>
+                <dt>&lt;br&gt; element</dt>
                     <dd>Used to cause a line break</dd>
                 <dt>&lt;pre&gt; element</dt>
                     <dd>Used to show preformaated text, causes the browser to render every whitespace.</dd>
                 <dt>&lt;!-- , --!&gt;</dt>
-                    <dd>The indicators for commenting in HTML code, &lt;!-- for opening the comment space and !--&gt for closing</dd>
+                    <dd>The indicators for commenting in HTML code, &lt;!-- for opening the comment space and !--&gt; for closing</dd>
             </dl>
  
         </main>
 
         <footer>
             <hr>
-            <blockquote>
+            <blockquote cite="https://www.goodreads.com/author/quotes/31232.Steven_Erikson">
                 “The future can ever promise but one thing and one thing only: surprises.” <br>
-                <cite="https://www.goodreads.com/author/quotes/31232.Steven_Erikson"><em><span class author> -Steven Erkison</span></em></cite>
+                <cite> &mdash;<span class="author">Steven Erkison</span></cite>
             </blockquote>
 
             <p>
-                &copy;2021 <a href="mailto:21100789@saultcollege.ca?subject=Message%20From%20CSD112%20Website" title = website creators email>Caleb Stubbe</a> 
+                &copy;2021 <a href="mailto:21100789@saultcollege.ca?subject=Message%20From%20CSD112%20Website" title="website creators email">Caleb Stubbe</a> 
             </p>
 
         </footer>
-        <p> 
-            <a href= "#id"  title ="back to top"> ◤ </a> <!--not sure if this line is not working properly or if website is not yet large enough for it to be used properly-->
-        </p>
+        <a href= "#top"  title="back to top"> ◤ </a> <!--not sure if this line is not working properly or if website is not yet large enough for it to be used properly-->
     </div>
 </body>
 </html>
