--- a/links.html
+++ b/links.html
@@ -19,7 +19,7 @@
     <title>CSD112-Caleb Stubbe</title>
 </head>
 <body>
-    <div class width-wrap>
+    <div class="width-wrap">
         <header id="top"> <!-- not sure if this line is not working properly or if website is not yet large enough for it to be used properly-->
             <nav>
                 <ul>
@@ -35,27 +35,25 @@
                 Useful Links
             </h1>
             <ul>
-                <li><a href="https://validator.w3.org/nu/" title="Html Validator website">Html Validator</a></li>
-                <li><a href="https://realfavicongenerator.net/" title="Favicon Generator website">Favicon Generator</a></li>
+                <li><a href="https://validator.w3.org/nu/" target="_blank" title="Html Validator website">Html Validator</a></li>
+                <li><a href="https://realfavicongenerator.net/" target="_blank" title="Favicon Generator website">Favicon Generator</a></li>
             </ul>
 
         </main>
 
         <footer>
             <hr>
-            <blockquote>
+            <blockquote cite="https://www.goodreads.com/author/quotes/31232.Steven_Erikson">
                 “The future can ever promise but one thing and one thing only: surprises.” <br>
-                <cite="https://www.goodreads.com/author/quotes/31232.Steven_Erikson"><em><span class author> -Steven Erkison</span></em></cite>
+                <cite> &mdash;<span class="author">Steven Erkison</span></cite>
             </blockquote>
 
             <p>
-                &copy;2021 <a href="mailto:21100789@saultcollege.ca?subject=Message%20From%20CSD112%20Website" title = website creators email>Caleb Stubbe</a> 
+                &copy;2021 <a href="mailto:21100789@saultcollege.ca?subject=Message%20From%20CSD112%20Website" title="website creators email">Caleb Stubbe</a> 
             </p>
 
         </footer>
-        <p> 
-            <a href= "#id"  title ="back to top"> ◤ </a> <!--not sure if this line is not working properly or if website is not yet large enough for it to be used properly-->
-        </p>
+        <a href= "#top"  title="back to top"> ◤ </a> <!--not sure if this line is not working properly or if website is not yet large enough for it to be used properly-->
     </div>
 </body>
 </html>
