--- a/index.html
+++ b/index.html
@@ -34,14 +34,24 @@
             <h1>
                 Welcome to Caleb's Website!
             </h1>
+            
+            <img src="images/my-pic1.jpg" alt="A picture of Caleb Stubbe"
+                 sizes=" (max-width: 500px) 150px, 300px"
+                 srcset="images/my-pic2.png 150w, images/my-pic3.png 300w">
+            
             <p>Hi! I'm Caleb Stubbe, I'm the youngest of 5 brothers.</p>
             <p>I live on St. Joseph Island, Ontario</p>
             <h2>
                 My Favourite Things
             </h2>
-            <a href="https://www.nintendo.com/en_CA/">
-                <img src="images/logo.png" alt="Nintendo logo that links to Nintendo's website">
-            </a>
+            <figure>
+                <a href="https://www.nintendo.com/en_CA/">
+                    <img src="images/logo.png" alt="Nintendo logo that links to Nintendo's website">
+                </a>
+                <figcaption>
+                    Nintendo's Logo
+                </figcaption>
+            </figure>
             <h3>
                 Book series
             </h3>
