--- a/glossary.html
+++ b/glossary.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="width-wrap">
-        <header id="top"> <!-- not sure if this line is not working properly or if website is not yet large enough for it to be used properly-->
+        <header id="top"> 
             <nav>
                 <ul>
                     <li><a href="index.html" title="Home">Home</a></li>
@@ -65,7 +65,7 @@
             </p>
 
         </footer>
-        <a href= "#top"  title="back to top"> ◤ </a> <!--not sure if this line is not working properly or if website is not yet large enough for it to be used properly-->
+        <a href= "#top"  title="back to top"> ◤ </a> 
     </div>
 </body>
 </html>
