--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <h1>
                 Welcome to Caleb's Website!
             </h1>
-            <a href="images/my-pic1.jpg">
-                <img src="images/my-pic1.jpg" alt="A picture of Caleb Stubbe"
+            <a href="images/my-pic1.jpg"><!-- try keep even full-size images to below 500kB -->
+                <img src="images/my-pic2.png" alt="A picture of Caleb Stubbe"
                      sizes=" (max-width: 500px) 150px, 300px"
-                     srcset="images/my-pic2.png 150w, images/my-pic3.png 300w">
+                     srcset="images/my-pic2.png 150w, images/my-pic3.png 300w"><!-- probably best to stick with jpg even for thumbnails -->
             </a>
             
             <p>Hi! I'm Caleb Stubbe, I'm the youngest of 5 brothers.</p>
@@ -77,7 +77,7 @@
             </h3>
 
             <audio src="https://ia801400.us.archive.org/24/items/roman_triumvirates_2110_librivox/romantriumvirates_01_merivale_128kb.mp3" controls>
-                <a href="https://ia801400.us.archive.org/24/items/roman_triumvirates_2110_librivox/romantriumvirates_01_merivale_128kb.mp3" alt = "chapter 1 of Roman Triumvirates on librivox"> </a>
+                <a href="https://ia801400.us.archive.org/24/items/roman_triumvirates_2110_librivox/romantriumvirates_01_merivale_128kb.mp3" alt = "chapter 1 of Roman Triumvirates on librivox">Download Chapter 1 of Roman Triumvirates</a>
             </audio>
 
             <h3>
@@ -103,6 +103,12 @@
             <p>
                  &copy;2021 <a href="mailto:21100789@saultcollege.ca?subject=Message%20From%20CSD112%20Website" title="website creators email">Caleb Stubbe</a> 
             </p>
+
+            <picture>
+                <source srcset="images/sc-logo/sc-logo.svg" type="image/svg+xml">
+                <img src="images/sc-logo/sc-logo.png" width="70" alt="Sault College Logo"
+                    srcset="images/sc-logo/sc-logo.png, images/sc-logo/sc-logo@1.5x.png 1.5x, images/sc-logo/sc-logo@2x.png 2x">
+            </picture>
 
         </footer>
         <a href= "#top"  title="back to top"> ◤ </a> 
