--- a/index.html
+++ b/index.html
@@ -42,6 +42,34 @@
             
             <p>Hi! I'm Caleb Stubbe, I'm the youngest of 5 brothers.</p>
             <p>I live on St. Joseph Island, Ontario</p>
+
+            <table>
+                <caption>Table 1. Current Courses</caption>
+                <thead>
+                    <tr><th rowspan = "2">Term</th><th colspan = "3">Course</th></tr>
+                    <tr><th>Code</th><th>Name</th><th>Hrs/Week</th></tr>
+                </thead>
+
+                <tbody>
+                    <tr><th rowspan = "6">Fall</th><td>CSD105</td><td>Python</td><td>3</td></tr>
+                    <tr><td>CMM115</td><td>Communications I</td><td>3</td></tr>
+                    <tr><td>CSD112</td><td>Introduction to Web Development</td><td>4</td></tr>
+                    <tr><td>CSO104</td><td>Introduction to Operating Systems and LAN</td><td>4</td></tr>
+                    <tr><td>MTH122</td><td>Computer Mathematics</td><td>3</td></tr>
+                    <tr><td>TNY130</td><td>Technology in Society</td><td>2</td></tr>
+                    <tr><th rowspan = "5">Winter</th><td>CSA103</td><td>Business Applications I</td><td>4</td></tr>
+                    <tr><td>CSD102</td><td>Programming Using C++</td><td>5</td></tr>
+                    <tr><td>CSD212</td><td>Web Scripting Languages</td><td>4</td></tr>
+                    <tr><td>CSO102</td><td>Introduction to Linux</td><td>4</td></tr>
+                    <tr><td>CST104</td><td>PC Hardware and Networking</td><td>5</td></tr>
+                </tbody>
+                
+                <tfoot>    
+                    <tr><th colspan = "3">Total</th><td>41</td></tr>
+                </tfoot>
+            </table>
+
+
             <h2>
                 My Favourite Things
             </h2>
